force-app/main/default/objects/FSM_IntegrationLog__c/FSM_IntegrationLog__c.object-meta.xml
<CustomObject>
    <description>Created as part of #SFS-32</description>
    <label>FSM Integration Log</label>
    <nameField>
        <displayFormat>Int-{000000}</displayFormat>
        <label>FSM Integration Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FSM Integration Logs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>