force-app/main/default/objects/FSM_IntegrationLog__c/fields/FSM_RecordId__c.field-meta.xml
<CustomField>
    <fullName>FSM_RecordId__c</fullName>
    <label>Record Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>