force-app/main/default/objects/FSM_IntegrationLog__c/fields/FSM_RequestPayload__c.field-meta.xml
<CustomField>
    <fullName>FSM_RequestPayload__c</fullName>
    <label>Request Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>