force-app/main/default/objects/FSM_IntegrationLog__c/fields/FSM_ResponsePayload__c.field-meta.xml
<CustomField>
    <fullName>FSM_ResponsePayload__c</fullName>
    <label>Response Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>