force-app/main/default/objects/FSM_IntegrationLog__c/fields/FSM_ServiceName__c.field-meta.xml
<CustomField>
    <fullName>FSM_ServiceName__c</fullName>
    <label>Service Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>