force-app/main/default/objects/FSM_IntegrationLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>FSM_RecordId__c</columns>
    <columns>FSM_ExternalId__c</columns>
    <columns>FSM_ServiceName__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>FSM_ResponsePayload__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>