force-app/main/default/objects/FSM_IntegrationLog__c/listViews/Integration_Log_INT_008_LS.listView-meta.xml
<ListView>
    <fullName>Integration_Log_INT_008_LS</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>FSM_ServiceName__c</columns>
    <columns>FSM_RecordId__c</columns>
    <columns>FSM_ExternalId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>FSM_RequestPayload__c</columns>
    <columns>FSM_ResponsePayload__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LAST_UPDATE</field>
        <operation>greaterThan</operation>
        <value>8/14/2025 3:00 PM</value>
    </filters>
    <filters>
        <field>FSM_ServiceName__c</field>
        <operation>equals</operation>
        <value>Send TMA Updates</value>
    </filters>
    <label>Integration Log_INT-008_TMA_LS</label>
    <sharedTo>
        <group>FSM_Tech_Support</group>
    </sharedTo>
</ListView>