force-app/main/default/objects/FSM_IntegrationLog__c/listViews/Integration_Log_INT_011_LS.listView-meta.xml
<ListView>
    <fullName>Integration_Log_INT_011_LS</fullName>
    <booleanFilter>1 AND 2 AND 3 and 4</booleanFilter>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>FSM_ServiceName__c</columns>
    <columns>FSM_RecordId__c</columns>
    <columns>FSM_ExternalId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>FSM_RequestPayload__c</columns>
    <columns>FSM_ResponsePayload__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FSM_ServiceName__c</field>
        <operation>contains</operation>
        <value>Appointment</value>
    </filters>
    <filters>
        <field>FSM_ServiceName__c</field>
        <operation>notEqual</operation>
        <value>Service Appointment Updates</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>10/3/2025 12:50 PM</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>lessThan</operation>
        <value>10/4/2025 2:00 PM</value>
    </filters>
    <label>Integration Log_INT-011_CustAppt_LS</label>
    <sharedTo>
        <group>FSM_Tech_Support</group>
    </sharedTo>
</ListView>