force-app/main/default/objects/FSM_IntegrationLog__c/listViews/Integration_Log_INT_015_LS.listView-meta.xml
<ListView>
    <fullName>Integration_Log_INT_015_LS</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>FSM_ServiceName__c</columns>
    <columns>FSM_RecordId__c</columns>
    <columns>FSM_ExternalId__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>OBJECT_ID</columns>
    <columns>FSM_RequestPayload__c</columns>
    <columns>FSM_ResponsePayload__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>FSM_ServiceName__c</field>
        <operation>startsWith</operation>
        <value>Asset Hierarchy Level</value>
    </filters>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Ian Tice</value>
    </filters>
    <label>Integration Log_INT-015_FLOCHierarchy_LS</label>
    <sharedTo>
        <group>FSM_Tech_Support</group>
    </sharedTo>
</ListView>